fix some spacing and sizes

--- a/client/css/main.css
+++ b/client/css/main.css
@@ -57,7 +57,7 @@
         opacity: 0;
         animation: fadeInAndRotate 0.5s linear 0.5s 1 forwards; }
         .section__header--title-and-desc--h1-container h1 {
-          font-size: 4rem;
+          font-size: 6rem;
           margin: 0.5rem 0;
           text-transform: uppercase;
           font-weight: 700;
@@ -66,7 +66,6 @@
           padding: 1.5rem;
           background: #5000ca;
           transform: rotate(0deg);
-          clip-path: polygon(0 0, 97% 3%, 96% 100%, 0% 100%);
           box-shadow: 0 2px 2px #32007e;
           opacity: 0;
           animation: fadeInAndRotateReverse 0.5s linear 1s 1 forwards; }
@@ -235,6 +234,7 @@
 @media screen and (min-width: 601px) {
   .section__projects {
     padding: 2rem 0;
+    margin: -6rem 0;
     display: flex;
     flex-direction: column;
     justify-content: center;
