--- a/sass/layout/_projectsMobile.scss
+++ b/sass/layout/_projectsMobile.scss
@@ -1,6 +1,7 @@
 @media screen and (min-width: 601px) {
 	.section__projects {
 		padding: 2rem 0;
+		margin: -6rem 0;
 		display: flex;
 		flex-direction: column;
 		justify-content: center;
